ビルド可能に修正

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>KOYOH's orbital trajectory</title>
+    <title>KOYOH's motion visualizar</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="../node_modules/cesium/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="index.css">
